--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -47,14 +47,9 @@
           <div class="content">
             <div class="simple-close close-agent-detail"></div>
             <div class="header">
-              {% if agent.avatar == blank %}
-                {% assign avatar = "/images/agent_placeholder.png" %}
-              {% else %}
-                {% assign avatar = agent.avatar%}
-              {% endif %}
-              <img src="{{avatar}}" class="bio-pic"/>
+              <img src="{{agent.avatar}}" class="bio-pic"/>
               <div class="contact">
-                <img src="{{avatar}}" class="bio-pic-mobile"/>
+                <img src="{{agent.avatar}}" class="bio-pic-mobile"/>
                 <h4>{{agent.first_name}} {{agent.last_name}}</h4>
                 <p class="no-margin">{{agent.position}}</p>
                 <br />
@@ -110,11 +105,7 @@
             {% for agent in site.agents %}
               <div class="agent">
                 <div class="bio-image">
-                  {% if agent.avatar %}
-                    <img src="{{agent.avatar}}"/>
-                  {% else %}
-                    <img src="/images/agent_placeholder.png"/>
-                  {% endif %}
+                  <img src="{{agent.avatar}}"/>
                   <div class="image-title"><span>{{agent.first_name}}</span> {{agent.last_name}}</div>
                 </div>
                 <div class="short-bio">
