Scroll to the top when the user navigates through the listings page.

--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -127,11 +127,11 @@
           {% endfor %}
         </div>
         <div class="paginator">
-          <div id="listings-prev" class="navigate-page">&lt;-</div>
+          <div id="listings-prev" class="navigate-page scroll-listings-top">&lt;-</div>
           <div class="pages">
-            <a id="1" class="selected">1</a>
+            <a id="1" class="selected scroll-listings-top">1</a>
           </div>
-          <div id="listings-next" class="navigate-page">-&gt;</div>
+          <div id="listings-next" class="navigate-page scroll-listings-top">-&gt;</div>
         </div>
       </div>
     </div>
