Fix mobile view about text padding.

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -313,7 +313,7 @@
 
       .description {
         width: 100%;
-        padding-top: 0;
+        padding: 38px 20px 0 20px;
         .head-title {
           text-align: center;
         }
