--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -351,6 +351,7 @@
             width: 100%;
             margin: 0 auto;
             text-align: center;
+            margin-top: 25px;
             > h4 {
               color: black;
             }
