--- a/_sass/listing.scss
+++ b/_sass/listing.scss
@@ -7,30 +7,36 @@
 }
 // print only
 .print {
+  @page {
+    size: A4;
+  }
+
   padding: 30px;
   .header {
     position: relative;
   }
   .logo {
-    width: 349px;
+    width: 9cm;
   }
   .contact {
     position: absolute;
-    left: 380px;
+    left: 10cm;
     bottom: 0;
+    font-size: 5pt;
   }
   .content {
     margin-top: 60px;
     .listing-name {
       text-transform: uppercase;
-      font-size: 53px;
+      font-size: 24pt;
     }
   }
   .gallery {
     margin-top: 12px;
+    width: 100%;
     >img {
       display: inline-block;
-      width: 220px;
+      width: 32.5%;
       height: 200px;
     }
   }
@@ -40,9 +46,9 @@
   }
   .text {
     float: left;
-    width: 60%;
+    width: 10cm;
     > h4 {
-      font-size: 20px;
+      font-size: 15pt;
       font-weight: 100;
     }
     > p {
@@ -53,45 +59,44 @@
   .location {
     float: right;
     padding: 20px;
+    width: 33%;
+    margin-right: .25cm;
     border-style: solid;
     border-width: thin;
-    // box-shadow: 0px 0px 18px 6px #f2f2f2;
-    margin-right: 18px;
     margin-top: 17px;
     opacity: .7;
     .location-header {
       font-weight: 800;
-      font-size: 18px;
+      font-size: 12pt;
     }
     > ul {
       padding-left: 0;
-      margin-top: 16px;
+      margin-top: .5cm;
       > li {
         list-style-type: none;
         margin-bottom: 7px;
-        font-size: 110%;
+        font-size: 8pt;
       }
     }
   }
 
   .features {
-    margin-top: 25px;
+    margin-top: 1cm;
   }
   .highlights {
-    width: 275px;
+    width: 8cm;
     float: left;
     opacity: .7;
     > h2 {
-      font-size: 16px;
+      font-size: 12pt;
     }
   }
   .amenities {
-    width: 275px;
+    width: 8cm;
     float: right;
-    margin-right: 16px;
     opacity: .7;
     > h2 {
-      font-size: 16px;
+      font-size: 12pt;
     }
   }
 
