Increase size of contact modal close button.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -669,7 +669,7 @@ a {
     font-size: 1.2em;
     display: inline-block;
     vertical-align: top;
-    margin-right: 5%;
+    margin: 1% 5% 0 0;
     .title {font-weight: bold}
     opacity: .9;
     a {
