Use pointer for cursor on navigation arrows.

--- a/_sass/listing.scss
+++ b/_sass/listing.scss
@@ -154,6 +154,7 @@
     }
     .gallery-navigation {
       position: absolute;
+      cursor: pointer;
       bottom: 10px;
       border: solid;
       border-width: 0 .045em .045em 0;
