--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -82,14 +82,27 @@
     }
   }
   @media screen and (max-width: $breakpoint-small) {
+    .top {
+      height: 100%;
+    }
+
+    .bottom {
+      height: 100%;
+    }
+
+    .footer {
+      height: 100%;
+    }
     .text {
+      position: static;
+      transform: translateY(0);
+      top: 0%;
       width: 94vw;
+      height: 100%;
+      padding: 40px 20px;
     }
     .study-carousel {
       width: 100vw;
-    }
-    .footer {
-      height: 100%;
     }
   }
 }
