--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -388,6 +388,8 @@ a {
   left: 0;
   right: 0;
   bottom: 0;
+  width: 100%;
+  height: 100%;
   background: white;
   z-index: 10;
   text-align: center;
@@ -881,6 +883,9 @@ a {
   }
 
   .contact-us-modal {
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
     .contact-form {
       position: absolute;
       top: 0;
