--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -53,6 +53,7 @@
         </ul>
       </div>
     </div>
+    <div class="main">
     <div id="header-home">
       <div id="header-content">
         <img id="header-logo" src="images/home-logo.png" alt=""/>
@@ -145,6 +146,7 @@
       </div>
       {% include footer.html %}
     </div>
+   </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
     <script type="text/javascript" src="scripts/formSubmit.js"></script>
