--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -37,33 +37,35 @@
         </ul>
       </div>
     </div>
-    <div id="container-experience">
-      <div class="top">
-        <img src="images/logo.png" class="logo-upper-left"/>
-        {% include contact-form.html %}
-        <div class="ham-menu"></div>
-        <div class="text">
-          <h4>{{page.text_title}}</h4>
-          <p>{{page.text_body}}</p>
-            <button class="contact-us-link">CONTACT US</button>
+    <div class="main">
+      <div id="container-experience">
+        <div class="top">
+          <img src="images/logo.png" class="logo-upper-left"/>
+          {% include contact-form.html %}
+          <div class="ham-menu"></div>
+          <div class="text">
+            <h4>{{page.text_title}}</h4>
+            <p>{{page.text_body}}</p>
+              <button class="contact-us-link">CONTACT US</button>
+          </div>
         </div>
-      </div>
-      <div class="bottom">
-        <div class="study-carousel">
-          {% for study in site.case_studies %}
-            <div class="study">
-              <div class="header">
-                <p class="name">{{study.name}}</h3>
-                <p>{{study.address_line_1}}</p>
-                <p>{{study.address_line_2}}</p>
+        <div class="bottom">
+          <div class="study-carousel">
+            {% for study in site.case_studies %}
+              <div class="study">
+                <div class="header">
+                  <p class="name">{{study.name}}</h3>
+                  <p>{{study.address_line_1}}</p>
+                  <p>{{study.address_line_2}}</p>
+                </div>
+                <p>{{study.text}}</p>
               </div>
-              <p>{{study.text}}</p>
-            </div>
-          {% endfor %}
+            {% endfor %}
+          </div>
         </div>
-      </div>
 
-      {% include footer.html %}
+        {% include footer.html %}
+      </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
