--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -83,80 +83,81 @@
           </ul>
         </div>
       </div>
-
-      <div id="container-listing" class="container-fluid">
-        <img src="/images/logo.png" class="logo-upper-left"/>
-        {% if page.property-header %}
-          <div id="header-listings" class="background-header" style="background-image:url({{page.property-header}})"></div>
-        {% else %}
-          <div id="header-listings" class="background-header"></div>
-        {% endif %}
-        <div id="listings-content">
-          <div id="header-text-listings">{{ page.location }}</div>
-          <div class="container">
-            <div id="listings-sidebar">
-              <div class="menu-top">
-                <div class="buttons">
-                  <a href="#" class="cool-button">CHECK AVAILABILITY</a>
-                  <a id="print-brochure" href="#" class="cool-button">PRINT BROCHURE</a>
-                </div>
-              </div>
-              <div class="menu">
-                <h2 class="sidebar-header"><span class="subdued"><strong>PROPERTY</strong> HIGHLIGHTS</span></h2>
-                <hr class ="light-line">
-                <ul class="bond-list">
-                  {% for highlight in page.highlights %}
-                    <li>{{ highlight }}</li>
-                    <hr>
-                  {% endfor %}
-                </ul>
-                <h2 class="sidebar-header"><strong>AMENITIES</strong></h2>
-                <hr class="light-line">
-                <ul class="bond-list">
-                  {% for amenity in page.amenities %}
-                  <li>{{ amenity }}</li>
-                  <hr>
-                  {% endfor %}
-                </ul>
-              </div>
-            </div>
-            <div id="listings-info">
-              <div class="info-box">
-                <div class="info-text">
-                  <h2 class="title">
-                    {{ page.info-title }}
-                  </h2>
-                  <p>
-                    {{ page.info-text }}
-                  </p>
-                </div>
-                <div class="listing-image-gallery">
-                  <div class="listing-carousel">
-                    {% for img-src in page.gallery-images %}
-                    <img src={{ img-src }} class="img-responsive listing-image"/>
-                    {% endfor %}
+      <div class="main">
+        <div id="container-listing" class="container-fluid">
+          <img src="/images/logo.png" class="logo-upper-left"/>
+          {% if page.property-header %}
+            <div id="header-listings" class="background-header" style="background-image:url({{page.property-header}})"></div>
+          {% else %}
+            <div id="header-listings" class="background-header"></div>
+          {% endif %}
+          <div id="listings-content">
+            <div id="header-text-listings">{{ page.location }}</div>
+            <div class="container">
+              <div id="listings-sidebar">
+                <div class="menu-top">
+                  <div class="buttons">
+                    <a href="#" class="cool-button">CHECK AVAILABILITY</a>
+                    <a id="print-brochure" href="#" class="cool-button">PRINT BROCHURE</a>
                   </div>
-                  <!-- only display the navigation arrows if there are more than one image -->
-                  {% if page.gallery-images[1] %}
-                    <div class="gallery-arrow-container">
-                      <div class="gallery-arrow-left gallery-navigation"></div>
-                      <div class="gallery-arrow-right gallery-navigation"></div>
-                    </div>
-                  {% endif %}
+                </div>
+                <div class="menu">
+                  <h2 class="sidebar-header"><span class="subdued"><strong>PROPERTY</strong> HIGHLIGHTS</span></h2>
+                  <hr class ="light-line">
+                  <ul class="bond-list">
+                    {% for highlight in page.highlights %}
+                      <li>{{ highlight }}</li>
+                      <hr>
+                    {% endfor %}
+                  </ul>
+                  <h2 class="sidebar-header"><strong>AMENITIES</strong></h2>
+                  <hr class="light-line">
+                  <ul class="bond-list">
+                    {% for amenity in page.amenities %}
+                    <li>{{ amenity }}</li>
+                    <hr>
+                    {% endfor %}
+                  </ul>
                 </div>
               </div>
-              <div class="info-box">
-                <h2 class="title">LOCATION</h2>
-                <div id="about-google-map"></div>
-                <h2 class="title">FLOORPLAN</h2>
-                <img src="{{ page.floorplan-image }}" class="img-responsive" />
+              <div id="listings-info">
+                <div class="info-box">
+                  <div class="info-text">
+                    <h2 class="title">
+                      {{ page.info-title }}
+                    </h2>
+                    <p>
+                      {{ page.info-text }}
+                    </p>
+                  </div>
+                  <div class="listing-image-gallery">
+                    <div class="listing-carousel">
+                      {% for img-src in page.gallery-images %}
+                      <img src={{ img-src }} class="img-responsive listing-image"/>
+                      {% endfor %}
+                    </div>
+                    <!-- only display the navigation arrows if there are more than one image -->
+                    {% if page.gallery-images[1] %}
+                      <div class="gallery-arrow-container">
+                        <div class="gallery-arrow-left gallery-navigation"></div>
+                        <div class="gallery-arrow-right gallery-navigation"></div>
+                      </div>
+                    {% endif %}
+                  </div>
+                </div>
+                <div class="info-box">
+                  <h2 class="title">LOCATION</h2>
+                  <div id="about-google-map"></div>
+                  <h2 class="title">FLOORPLAN</h2>
+                  <img src="{{ page.floorplan-image }}" class="img-responsive" />
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      {% include footer.html %}
+        {% include footer.html %}
     </div>
+   </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="../scripts/script.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
