--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -29,7 +29,6 @@
     });</script>
   </head>
   <body>
-    <div class="web">
     {% include contact-form.html %}
     <div class="nav-modal">
       <div class="inner">
@@ -44,98 +43,100 @@
         </ul>
       </div>
     </div>
-    <div id="container-listings">
-      <img src="images/logo.png" class="logo-upper-left"/>
-      <div class="ham-menu"></div>
-      <div class="content">
-        <div class="header">
-          <h4>{{page.header}}</h4>
-          <p>
-            {{page.subheader}}
-          </p>
+    <div class="main">
+      <div id="container-listings">
+        <img src="images/logo.png" class="logo-upper-left"/>
+        <div class="ham-menu"></div>
+        <div class="content">
+          <div class="header">
+            <h4>{{page.header}}</h4>
+            <p>
+              {{page.subheader}}
+            </p>
 
-          <input type="text" placeholder="Search properties" class="listings-search" id="listings-text-search">
-          <div class="submenu">
-            <div id="features-toggle" class="plus-sign"></div>
-            <span id="show-more-filters" class="subdued">OPTIONS</span>
-            <span id="show-less-filters" class="subdued">LESS OPTIONS</span>
+            <input type="text" placeholder="Search properties" class="listings-search" id="listings-text-search">
+            <div class="submenu">
+              <div id="features-toggle" class="plus-sign"></div>
+              <span id="show-more-filters" class="subdued">OPTIONS</span>
+              <span id="show-less-filters" class="subdued">LESS OPTIONS</span>
+            </div>
+            <div class="flexbox listings filters">
+              {% assign locations = site.listings |map: "address-line-2"| |uniq| %}
+              {% assign statuses = site.listings |map: "status"| |uniq| %}
+              {% assign type = site.listings |map: "type"| |uniq| %}
+              <select name="location" id="location-filter">
+                <option value="n/a">Any Location</option>
+                {% for location in locations %}
+                  <option value="{{location}}">{{location}}</option>
+                {% endfor %}
+              </select>
+              <select name="status" id="status-filter">
+                <option value="n/a">Any Status</option>
+                <option value="true">Available Now</option>
+                <option value="false">Not Available</option>
+              </select>
+              <select name="type" id="type-filter">
+                <option value="n/a">Any Type</option>
+                <option value="rent">Rent</option>
+                <option value="lease">Lease</option>
+              </select>
+              <select name="min-rooms" id="min-rooms">
+                <option value="1">Min. Rooms</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select>
+              <input id="min-size" type="text" placeholder=" Min. Size" class="subdued">
+              <input id="max-price" type="text" placeholder=" Price" class="subdued">
+              <button type"submit" id="listing-clear-filters">CLEAR OPTIONS</button>
+              <button type"submit" id="listing-search">SEARCH</button>
+            </div>
           </div>
-          <div class="flexbox listings filters">
-            {% assign locations = site.listings |map: "address-line-2"| |uniq| %}
-            {% assign statuses = site.listings |map: "status"| |uniq| %}
-            {% assign type = site.listings |map: "type"| |uniq| %}
-            <select name="location" id="location-filter">
-              <option value="n/a">Any Location</option>
-              {% for location in locations %}
-                <option value="{{location}}">{{location}}</option>
-              {% endfor %}
-            </select>
-            <select name="status" id="status-filter">
-              <option value="n/a">Any Status</option>
-              <option value="true">Available Now</option>
-              <option value="false">Not Available</option>
-            </select>
-            <select name="type" id="type-filter">
-              <option value="n/a">Any Type</option>
-              <option value="rent">Rent</option>
-              <option value="lease">Lease</option>
-            </select>
-            <select name="min-rooms" id="min-rooms">
-              <option value="1">Min. Rooms</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-              <option value="5">5</option>
-            </select>
-            <input id="min-size" type="text" placeholder=" Min. Size" class="subdued">
-            <input id="max-price" type="text" placeholder=" Price" class="subdued">
-            <button type"submit" id="listing-clear-filters">CLEAR OPTIONS</button>
-            <button type"submit" id="listing-search">SEARCH</button>
-          </div>
-        </div>
-        <div id="properties" class="flexbox listings">
-          {% for listing in site.listings %}
-             <div class="listing-preview" data-location="{{listing.address-line-2}}" data-available="{{listing.available}}" data-type="{{listing.type}}" data-rooms="{{listing.rooms}}" data-size="{{listing.sq-footage}}" data-price="{{listing.price}}">
-              <a href={{listing.url}}>
-                {% if listing.property-preview-image %}
-                  <div class="header" style="background-image:url({{listing.property-preview-image}})">
-                {% else %}
-                  <div class="header">
-                {% endif %}
-                <div class="label">{{listing.type}}</div>
-                <div class="address">
-                  <div>{{listing.address-line-1}}</div>
-                  <div>{{listing.address-line-2}}</div>
-                </div>
-                </div>
-                <div class="listing-content">
-                  <p>
-                    {{listing.short-caption}}
-                  </p>
-                  <div class="amenities">
-                    <p><img src="images/icons/door.png" /> {{listing.rooms}} Rooms</p>
-                    <p><img src="images/icons/tub.png" /> {{listing.baths}} Baths</p>
-                    <p><img src="images/icons/bed.png" /> {{listing.bedrooms}} Bedrooms</p>
-                    <p><img src="images/icons/ruler.png" /> {{listing.sq-footage}} Sq ft</p>
+          <div id="properties" class="flexbox listings">
+            {% for listing in site.listings %}
+              <div class="listing-preview" data-location="{{listing.address-line-2}}" data-available="{{listing.available}}" data-type="{{listing.type}}" data-rooms="{{listing.rooms}}" data-size="{{listing.sq-footage}}" data-price="{{listing.price}}">
+                <a href={{listing.url}}>
+                  {% if listing.property-preview-image %}
+                    <div class="header" style="background-image:url({{listing.property-preview-image}})">
+                  {% else %}
+                    <div class="header">
+                  {% endif %}
+                  <div class="label">{{listing.type}}</div>
+                  <div class="address">
+                    <div>{{listing.address-line-1}}</div>
+                    <div>{{listing.address-line-2}}</div>
                   </div>
-                </div>
-                <div class="listing-preview-footer">
-                  <strong>{{listing.price}}</strong> per month
-                </div>
-              </a>
-             </div>
-          {% endfor %}
-        </div>
-        <div class="paginator">
-          <div id="listings-prev" class="navigate-page scroll-listings-top">&lt;-</div>
-          <div class="pages">
-            <a id="1" class="selected scroll-listings-top">1</a>
+                  </div>
+                  <div class="listing-content">
+                    <p>
+                      {{listing.short-caption}}
+                    </p>
+                    <div class="amenities">
+                      <p><img src="images/icons/door.png" /> {{listing.rooms}} Rooms</p>
+                      <p><img src="images/icons/tub.png" /> {{listing.baths}} Baths</p>
+                      <p><img src="images/icons/bed.png" /> {{listing.bedrooms}} Bedrooms</p>
+                      <p><img src="images/icons/ruler.png" /> {{listing.sq-footage}} Sq ft</p>
+                    </div>
+                  </div>
+                  <div class="listing-preview-footer">
+                    <strong>{{listing.price}}</strong> per month
+                  </div>
+                </a>
+              </div>
+            {% endfor %}
           </div>
-          <div id="listings-next" class="navigate-page scroll-listings-top">-&gt;</div>
+          <div class="paginator">
+            <div id="listings-prev" class="navigate-page scroll-listings-top">&lt;-</div>
+            <div class="pages">
+              <a id="1" class="selected scroll-listings-top">1</a>
+            </div>
+            <div id="listings-next" class="navigate-page scroll-listings-top">-&gt;</div>
+          </div>
         </div>
       </div>
+      {% include footer.html %}
     </div>
-    {% include footer.html %}
    </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
       <script type="text/javascript" src="scripts/script.js"></script>
