--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -18,6 +18,7 @@ $page-max-width: 1800px;
 $listings-text: #de6c62;
 $brand-blue: #387ac8;
 $left-align-home: 80px;
+$left-align-home-mobile: 25px;
 
 
 $browser-context: 16; // Default
