Increase z-index of ham icon.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -806,7 +806,7 @@ a {
   .services-header {
     margin-top: 0;
     padding-top: 12px;
-    padding-left: $left-align-home-mobile;
+    padding-left: 21px;
   }
   .ham-menu {
     display: block !important;
