--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -319,7 +319,7 @@ a {
   right: 0;
   bottom: 0;
   background: rgba(255, 255, 255, 0.8);
-  z-index: 10;
+  z-index: 101;
   .contact-form {
     width: 50%;
     margin: 112px auto 0 auto;
@@ -777,9 +777,8 @@ a {
   }
 
   .modal-open {
-    // visibility: hidden;
-    overflow: hidden;
-    height: 100%;
+    display: none;
+    height: 0;
   }
 
   .contact-info-body {
