Overflow hidden on body to disable scrolling on desktop view.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -12,7 +12,10 @@ body {
 
 .modal-open {
   overflow: hidden;
-  pointer-events: none;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 strong, b {
