Increase top/bottom padding - review testimonial on mobile.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -839,11 +839,11 @@ a {
 
   .slick-dots {
     margin-top: 0;
-    padding-bottom: 6px;
+    // padding-bottom: 6px;
   }
 
   .review-slideshow {
-    padding: 14px;
+    padding: 28px 14px;
     .inner {
       img {
         margin-top: 0;
