Reduce height of header on the listing page for mobile. Reduce padding for uls on the same page as well. Fix padding around location header.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,13 +20,13 @@
 
     <div class="column social">
       <a href="https://www.instagram.com/{{site.data.contact.instagram}}" target="_blank">
-        <img src="images/social/i.svg"/>
+        <img src="/images/social/i.svg"/>
       </a>
       <a href="https://www.twitter.com/{{site.data.contact.twitter}}" target="_blank">
-        <img src="images/social/t.svg"/>
+        <img src="/images/social/t.svg"/>
       </a>
       <a href="https://www.facebook.com/{{site.data.contact.facebook}}" target="_blank">
-        <img src="images/social/f.svg"/>
+        <img src="/images/social/f.svg"/>
       </a>
     </div>
     <div class="column copyright">
