--- a/_sass/listings.scss
+++ b/_sass/listings.scss
@@ -127,6 +127,7 @@
         left: 0;
         height: 50%;
         width: 100%;
+        z-index: 1;
         background-image: linear-gradient(to bottom, rgba(#eee, 0), #303030);
       }
       .label {
@@ -149,6 +150,7 @@
         text-align: left;
         padding: 0 0 12px 12px;
         font-size: 1.2em;
+        z-index: 2;
       }
     }
     .listing-content {
