Change listing carousel slideshow so that the images are contian and have padding top of 56.25% (to enforce 16:9 aspect ratio).

--- a/_sass/listing.scss
+++ b/_sass/listing.scss
@@ -134,7 +134,11 @@
   }
 
   .listing-image {
-    height: 365px;
+    padding-top: 56.25%;
+    background-color: black;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
   }
   .listing-image-gallery {
     width: 50%;
