--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -133,7 +133,10 @@
                   <div class="listing-image-gallery">
                     <div class="listing-carousel">
                       {% for img-src in page.gallery-images %}
-                      <img src={{ img-src }} class="img-responsive listing-image"/>
+                        <div class="listing-image-slide">
+                          <div class="listing-image" style="background-image: url({{ img-src }})"></div>
+                        </div>
+                      <!-- <img src={{ img-src }} class="img-responsive listing-image"/> -->
                       {% endfor %}
                     </div>
                     <!-- only display the navigation arrows if there are more than one image -->
