--- a/_sass/listings.scss
+++ b/_sass/listings.scss
@@ -253,15 +253,18 @@
 
     .submenu {
       display: block;
-      margin-top: 14px;
+      margin-top: 18px;
     }
 
     .listings {
       width: 90%;
+      margin-top: 18px;
+      margin-bottom: 22px;
     }
 
     .paginator {
       margin-top: 0;
+      margin-bottom: 25px;
       > div {
         padding: 3px;
       }
