Use a gradient to ensure that listing preview and listing page titles are clearly visible. Minor cleanup on about page.

--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -92,7 +92,9 @@
             <div id="header-listings" class="background-header"></div>
           {% endif %}
           <div id="listings-content">
-            <div id="header-text-listings">{{ page.location }}</div>
+            <div id="header-text-listings">
+              <div class="location">{{ page.location }}</div>
+            </div>
             <div class="container">
               <div id="listings-sidebar">
                 <div class="menu-top">
