--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -132,11 +132,15 @@
             {% endfor %}
           </div>
           <div class="paginator">
-            <div id="listings-prev" class="navigate-page scroll-listings-top">&lt;-</div>
+            <div id="listings-prev" class="navigate-page scroll-listings-top">
+              <div class="navigation-arrow-left navigation-arrows"></div>
+            </div>
             <div class="pages">
               <a id="1" class="selected scroll-listings-top">1</a>
             </div>
-            <div id="listings-next" class="navigate-page scroll-listings-top">-&gt;</div>
+            <div id="listings-next" class="navigate-page scroll-listings-top">
+              <div class="navigation-arrow-right navigation-arrows"></div>
+            </div>
           </div>
         </div>
       </div>
