--- a/_sass/listings.scss
+++ b/_sass/listings.scss
@@ -1,5 +1,18 @@
 #container-listings {
-  // need the actual asset
+  .navigation-arrows {
+    position: static;
+    width: 14px;
+    height: 14px;
+  }
+
+  #navigation-arrow-right {
+    margin-left: 8px;
+  }
+
+  #navigation-arrow-left {
+    margin-right: 8px;
+  }
+
   background-image: url(../images/about/fs-bg.jpg);
   background-size: cover;
   .content {
@@ -248,6 +261,7 @@
    .navigate-page {
      color: $primary-color;
      cursor: pointer;
+     vertical-align: middle;
    }
   }
 
