--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -146,6 +146,7 @@
       </div>
       {% include footer.html %}
     </div>
+    <div class="arrow-up"></div>
    </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
       <script type="text/javascript" src="scripts/script.js"></script>
