--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,4 +33,7 @@
       Copyright &copy; GroundSource
     </div>
   </div>
+  <div class="to-top">
+    <img class="arrow-up" src="/images/white-arrow.png" />
+  </div>
 </div>
