--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -10,6 +10,22 @@
   position: fixed;
   right: 10px;
   top: 10px;
+  box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
+}
+
+@mixin hamburger-menu {
+  background-color: white;
+  background-image: url(../images/ham-menu.png);
+  background-size: 2em;
+  background-position: center center;
+  background-repeat: no-repeat;
+  padding: 2em;
+  cursor: pointer;
+  z-index: 100;
+  position: fixed;
+  right: 20px;
+  top: 20px;
+  box-shadow: 0px 1px 5px rgba(0,0,0,0.15);
 }
 
 @mixin close-button {
