Restyle the contact-us mobile view so that the second line wraps (and text is still centered).

--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -1,10 +1,22 @@
 <div class="contact-info-body">
    <div class="contact-row">
-    <div><img src="/images/phone-icon.png" class="icon-small"/>{{site.data.contact.phone}}</div>
-    <div><img src="/images/location-icon.png" class="icon-small"/><span class="underline">{{site.data.contact.address}}</span></div>
+    <div>
+      <img src="/images/phone-icon.png" class="icon-small"/>
+      <span>{{site.data.contact.phone}}</span>
+    </div>
+    <div>
+      <img src="/images/location-icon.png" class="icon-small address"/>
+      <span class="underline address-line">{{site.data.contact.address}}</span>
+    </div>
   </div>
   <div class="contact-row">
-    <div><img src="/images/email-icon.png" class="icon-small"/><a href="mailto:{{site.data.email}}">{{site.data.contact.email}}</a></div>
-    <div><img src="/images/ig-icon.png" class="icon-small"/><a href="https://www.instagram.com/{{site.data.instagram}}">@{{site.data.contact.instagram}}</a></div>
+    <div>
+      <img src="/images/email-icon.png" class="icon-small"/>
+      <span><a href="mailto:{{site.data.email}}">{{site.data.contact.email}}</a></span>
+    </div>
+    <div>
+      <img src="/images/ig-icon.png" class="icon-small"/>
+      <span><a href="https://www.instagram.com/{{site.data.instagram}}">@{{site.data.contact.instagram}}</a></span>
+    </div>
   </div>
 </div>
