--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -134,6 +134,9 @@ a {
   background: rgba(255, 255, 255, 0.9);
   padding: 15px 22px 34px 22px;
   color: #858585;
+  width: 72%;
+  text-align: center;
+  margin: 0 auto;
   .contact-row {
     display: flex;
     flex-direction: row;
@@ -141,12 +144,17 @@ a {
     justify-content: center;
     font-size: .7em;
     text-align: left;
-    padding: 0 0 9px 26px;
-    > img {
-      float: left;
-    }
+    padding-bottom: 9px;
     > div {
       width: 50%;
+      > img {
+      float: left;
+      margin-top: -12px;
+      margin-bottom: 8px;
+      }
+      > span {
+        margin-top: 10px;
+      }
     }
   }
 }
