--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -820,6 +820,7 @@ a {
   .contact-info-body {
     font-size: .9em;
     margin-top: 12px;
+    width: 100%;
     .contact-row {
       padding-left: 0;
       margin: 0 auto;
