--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,22 @@
       <div class="title">CONTACT</div>
     </div>
 
-    <div class="column social">
+    <!-- <div class="column social">
+      <a href="https://www.instagram.com/{{site.data.contact.instagram}}" target="_blank">
+        <img src="/images/social/i.svg"/>
+      </a>
+      <a href="https://www.twitter.com/{{site.data.contact.twitter}}" target="_blank">
+        <img src="/images/social/t.svg"/>
+      </a>
+      <a href="https://www.facebook.com/{{site.data.contact.facebook}}" target="_blank">
+        <img src="/images/social/f.svg"/>
+      </a>
+    </div> -->
+    <div class="column copyright">
+      Copyright &copy; GroundSource
+    </div>
+  </div>
+  <div class="column social">
       <a href="https://www.instagram.com/{{site.data.contact.instagram}}" target="_blank">
         <img src="/images/social/i.svg"/>
       </a>
@@ -29,8 +44,4 @@
         <img src="/images/social/f.svg"/>
       </a>
     </div>
-    <div class="column copyright">
-      Copyright &copy; GroundSource
-    </div>
-  </div>
 </div>
