--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,8 +5,7 @@
     <title>GROUNDSOURCE</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    {% include header-links.html %}
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -23,25 +22,26 @@
     <!-- endbuild -->
   </head>
   <body>
-    <div id="about-header">
-      <img src="images/logo.png" class="logo-upper-left"/>
-      {% include contact-form.html %}
-      <div class="ham-menu"></div>
-      <div class="nav-modal">
-        <div class="inner">
-          <img src="images/logo.png" class="modal-logo"/>
-          <div class="menu-close"></div>
-          <ul class="nav">
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="listings.html">LISTINGS</a></li>
-            <li><a href="experience.html">EXPERIENCE</a></li>
-            <li><a class="active" href="about.html">ABOUT</a></li>
-            <li><a class="contact-us-link">CONTACT</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
+    {% include login.html %}
     <div class="main">
+      <div id="about-header">
+          <img src="images/logo.png" class="logo-upper-left"/>
+          {% include contact-form.html %}
+          <div class="ham-menu"></div>
+          <div class="nav-modal">
+            <div class="inner">
+              <img src="images/logo.png" class="modal-logo"/>
+              <div class="menu-close"></div>
+              <ul class="nav">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="listings.html">LISTINGS</a></li>
+                <li><a href="experience.html">EXPERIENCE</a></li>
+                <li><a class="active" href="about.html">ABOUT</a></li>
+                <li><a class="contact-us-link">CONTACT</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
       <div id="container-about">
         {% for agent in site.agents %}
           <div class="agent-details" id="agent-{{forloop.index}}">
@@ -135,8 +135,7 @@
         </div>
       </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="scripts/script.js"></script>
+    {% include include-scripts.html %}
   </body>
 </html>
 
