--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -5,10 +5,7 @@
     <title>GROUNDSOURCE</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
-    <link rel="stylesheet" href="css/main.css">
-
+    {% include header-links.html %}
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
@@ -24,6 +21,7 @@
     <!-- endbuild -->
   </head>
   <body>
+    {% include login.html %}
     <div class="nav-modal">
       <div class="inner">
         <img src="images/logo.png" class="modal-logo"/>
@@ -67,10 +65,7 @@
         {% include footer.html %}
       </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
-    <script type="text/javascript" src="scripts/formSubmit.js"></script>
-    <script type="text/javascript" src="scripts/script.js"></script>
+    {% include include-scripts.html %}
     <script type="text/javascript">
       $(document).ready(function() {
         $('.study-carousel').slick({
