--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -5,9 +5,7 @@
     <title>GROUNDSOURCE</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
-    <link rel="stylesheet" href="css/main.css">
+    {% include header-links.html %}
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -30,6 +28,7 @@
     });</script>
   </head>
   <body>
+    {% include login.html %}
     {% include contact-form.html %}
     <div id="top-nav">
       <ul>
@@ -147,10 +146,7 @@
         {% include footer.html %}
       </div>
    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
-    <script type="text/javascript" src="scripts/formSubmit.js"></script>
-    <script type="text/javascript" src="scripts/script.js"></script>
+    {% include include-scripts.html %}
     <script>
       $('.review-carousel').slick({
         "autoplay": false,
