--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -5,8 +5,7 @@
     <title>GROUNDSOURCE</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css">
+    {% include header-links.html %}
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -29,6 +28,7 @@
     });</script>
   </head>
   <body>
+    {% include login.html %}
     {% include contact-form.html %}
     <div class="nav-modal">
       <div class="inner">
@@ -146,6 +146,5 @@
       </div>
       {% include footer.html %}
     </div>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript"></script>
-      <script type="text/javascript" src="scripts/script.js"></script>
+      {% include include-scripts.html %}
     </body>
