--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -3,12 +3,31 @@ html {
 }
 
 body {
-  display: none;
   background-color: #fff;
   margin: 0;
   width: 100%;
   font-family: $font-brand;
   font-size: 1vw;
+}
+
+form.login {
+  > label {
+    float: left;
+    margin-bottom: 15px;
+  }
+
+  > input {
+    float: right;
+    margin-bottom: 15px;
+  }
+}
+
+.ui-dialog {
+  width: 450px;
+}
+
+.main {
+  display: none;
 }
 
 .modal-open {
