Place new amenities on listing preview section.

--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -8,6 +8,7 @@
     {% include header-links.html %}
   </head>
   <body>
+    {% include login.html %}
     <div class="print">
       <div class="header">
         <img class="logo" src="/images/logo.png"/>
