--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -1099,6 +1099,7 @@ a {
     color: white;
     .inner {
       margin-left: 0;
+      padding-left: 0;
     }
     & > * {
       line-height: 2.2;
