Style the amenity table.

--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -114,7 +114,7 @@
                   </div>
                   </div>
                   <div class="listing-content">
-                    <p>
+                    <p class="short-caption">
                       {{listing.short-caption}}
                     </p>
                     <div class="amenities">
